fix close z-index

--- a/scss/cblightbox.scss
+++ b/scss/cblightbox.scss
@@ -44,7 +44,7 @@
 	overflow: hidden;
 	cursor: pointer;
 	//opacity: 0.65;
-	z-index: 10;
+	z-index: 20;
     //transition: opacity 250ms ease;
 
     &:after{
